--- a/otwartemigawkifront/src/css/Login.css
+++ b/otwartemigawkifront/src/css/Login.css
@@ -23,3 +23,31 @@
     flex-direction: column;
     gap: 20px;
 }
+
+.popup{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 30vw;
+    min-height: 200px;
+    border: 3px solid black;
+    border-radius: 30px;
+    padding: 10px;
+    position: absolute;
+    bottom: 2%;
+    right: 2%;
+    
+}
+
+.failed{
+    background-color: rgb(212, 119, 138);
+}
+
+.success{
+    background-color: rgb(102, 156, 100);
+}
+
+.popup p{
+    text-align: center;
+}
