--- a/otwartemigawkifront/src/css/AddDates.css
+++ b/otwartemigawkifront/src/css/AddDates.css
@@ -2,3 +2,11 @@
     flex-direction: column;
     width: 400px;
 }
+
+.flex-column-centered{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
