reservation logic connected to frontend, Manage sessions connected to api, upcoming sessions table added to Manage sessions, and usePost component created, added to Login.js

--- a/otwartemigawkifront/src/css/Reservation.css
+++ b/otwartemigawkifront/src/css/Reservation.css
@@ -49,3 +49,8 @@
     margin-top:15px;
 }
 
+.highlighted-date {
+    background-color: #49473f; /* Example background color */
+    color: white; /* Example text color */
+    font-weight: 600;
+  }
