--- a/otwartemigawkifront/src/css/Price.css
+++ b/otwartemigawkifront/src/css/Price.css
@@ -14,9 +14,20 @@
     width: 70%;
 }
 
-.price-segment-image{
+.price-segment-image-div{
     border-radius: 10px;
+    width: 30%;
     height: 90%;
+    position: relative;
+    overflow: hidden;
+}
+
+.price-segment-image{
+    width: 100%; /* Ensure the image covers the entire div */
+    height: auto; /* Maintain aspect ratio */
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 
