--- a/otwartemigawkifront/src/css/AddGallery.css
+++ b/otwartemigawkifront/src/css/AddGallery.css
@@ -2,11 +2,69 @@
     gap: 40px;
 }
 
-.image-drop{
+.dropzone{
     border: 3px dashed black;
-    width: 50%;
     height: 40vh;
     margin-top: 40px;
     cursor: pointer;
     border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    text-align: center;
 }
+
+.dropzone-content{
+    text-align: center;
+}
+
+.preview-img-div{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.dropzone-outer-div{
+    width: 50%;
+}
+
+
+.preview-container {
+    position: relative;
+    margin: 10px;
+    display: inline-block;
+  }
+
+  .preview-img {
+    max-width: 200px;
+    max-height: 200px;
+    display: block;
+  }
+  
+  .dropzone-preview-delete {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    z-index: 100;
+    background: rgba(255, 0, 0, 0.8);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+  
+  .dropzone-preview-delete:hover {
+    background: rgba(255, 0, 0, 1);
+  }
+
+  .flex-column-centered{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
