--- a/otwartemigawkifront/src/css/Home.css
+++ b/otwartemigawkifront/src/css/Home.css
@@ -1,7 +1,10 @@
-
-.about-me{
+.about-me {
     height: 30vh;
     flex-direction: column;
     width: 50%;
     margin: 80px auto;
+}
+
+.main-page {
+    overflow-x: hidden;
 }
